2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘SHARED’ more.

	* ci.c (addassoclst): Use ‘ZLLOC’.
	* rcs.c (getassoclst, getchaccess)
	(getmessage, getstates, main): Likewise.
	(rmnewlocklst): Don't ‘tfree’.
	* rlog.c (getlocker, getauthor, getstate)
	(getdatepair, getrevpairs): Use ‘ZLLOC’.
	* base.h (talloc, tfree): Delete macros.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Bifurcate ‘fro_getbyte’ to fro_{try,must}_getbyte.

	* b-fro.c (GETBYTE_BODY): New macro.
	(fro_getbyte): Delete func.
	(fro_try_getbyte, fro_must_getbyte): New funcs.
	(fro_get_prev_byte): Use ‘fro_must_getbyte’.
	* b-fro.h (fro_getbyte): Delete func decl.
	(fro_try_getbyte, fro_must_getbyte): New func decls.
	(GETCHAR_OR) Use ‘fro_try_getbyte’.
	(GETCHAR): Use ‘fro_must_getbyte’.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: must_get_colon_delta_num

	* rcssyn.c (must_get_colon_delta_num): New static func.
	(getadmin): Use it.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: must_get_delta_num

	* rcslex.c (must_get_delta_num): New func.
	* base.h (must_get_delta_num): New func decl.
	* rcs.c (scanlogtext): Use ‘must_get_delta_num’.
	* rcsgen.c (scandeltatext): Likewise.
	* rlog.c (readdeltalog): Likewise.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘strlen’ less.

	* rcs.c (main): Use ‘commsymlen’.
	* rcsfnms.c (pairnames): Use ‘intern’, ‘maybe.bestfit.size’.
	* rcslex.c (lookup): Use ‘intern’.
	* rcstime.c (date2str): Track write count via ‘sprintf’ rv.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Enable 64-bit file offsets.

	* base.h (_FILE_OFFSET_BITS): New #define.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘tiny_branches’ global.

	* base.h (tiny_branches): New var decl (via ‘TINY_DECL’).
	* b-anchor.c (tiny_branches): New var (via ‘TINYK’).
	* rcssyn.c (tiny_branches): Delete static var.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>
